# ha-duco

./: .gitignore  README.md  hacs.json  pyproject.toml  requirements.txt  setup.cfg
custom_components/duco/: __init__.py  button.py  config_flow.py  const.py  const_flow.py  coordinator.py  device.py  diagnostics.py  entity.py  manifest.json  number.py  sensor.py  sensors.py  strings.json  switch.py
custom_components/duco/api/: call_handler.py  utils.py
custom_components/duco/api/DTO/: ActionDTO.py  ApiDTO.py  ConfigDTO.py  DeviceDTO.py  InfoDTO.py  NodeActionDTO.py  NodeConfigDTO.py  NodeInfoDTO.py  __init__.py
custom_components/duco/api/private/: api_key_generator.py  cert_handler.py  duco_client.py  rest_handler.py
custom_components/duco/api/public/: duco_client.py
custom_components/duco/certs/: create_certificate.sh
