[project]
dependencies = [
    "aiohttp>=3.11.11",
    "dacite>=1.8.1",
    "homeassistant>=2025.2.5",
    "orjson>=3.10.12",
]
description = "Add your description here"
name = "my-ha-duco"
readme = "README.md"
requires-python = ">=3.13"
version = "2.2.0"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "codespell>=2.3.0",
    "flake8>=7.1.1",
    "homeassistant>=2024.12.5",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pyupgrade>=3.19.1",
    "ruff>=0.8.4",
    "types-orjson>=3.6.2",
    "typing-extensions>=4.12.2",
]

[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "my-ha-duco"
packages = [{ include = "my_ha_duco" }]
readme = "README.md"
version = "2.2.0"

[tool.poetry.dependencies]
python = "^3.13"
